update for solving marquee issue on Safari

--- a/style.css
+++ b/style.css
@@ -1264,3 +1264,7 @@ body.lock-scroll {
   cursor: not-allowed !important;
   box-shadow: none !important;
 }
+
+.no-animation {
+  animation: none !important;
+}
